rnsc/tests/snapshots/error-parser-instructions-recovery_multiple_errors.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class RecoveryMultipleErrors
.super java/lang/Object

.method static main ([Ljava/lang/String;)V
  .code stack 2 locals 1
    ldc "first error"
    ldc 42
    ldc "second error"
    return
  .code_end
.method_end
.class_end
----- STDERR -----
[E-024] Error: instruction 'ldc' requires an explicit type hint
   ╭─[ test_data/rns_integration/error/parser/instructions/recovery_multiple_errors.rns:6:9 ]
   │
 6 │     ldc "first error"
   │     ─┬─ ──────┬──────  
   │      ╰───────────────── the instruction 'ldc' requires an explicit type hint as operand
   │               │        
   │               ╰──────── but found identifier
   │ 
   │ Help: Please add an explicit type to the operand, for example:
   │       ldc @string "Hello World!"
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-024
───╯
[E-024] Error: instruction 'ldc' requires an explicit type hint
   ╭─[ test_data/rns_integration/error/parser/instructions/recovery_multiple_errors.rns:7:9 ]
   │
 7 │     ldc 42
   │     ─┬─ ─┬  
   │      ╰────── the instruction 'ldc' requires an explicit type hint as operand
   │          │  
   │          ╰── but found identifier
   │ 
   │ Help: Please add an explicit type to the operand, for example:
   │       ldc @string "Hello World!"
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-024
───╯
[E-024] Error: instruction 'ldc' requires an explicit type hint
   ╭─[ test_data/rns_integration/error/parser/instructions/recovery_multiple_errors.rns:8:9 ]
   │
 8 │     ldc "second error"
   │     ─┬─ ───────┬──────  
   │      ╰────────────────── the instruction 'ldc' requires an explicit type hint as operand
   │                │        
   │                ╰──────── but found identifier
   │ 
   │ Help: Please add an explicit type to the operand, for example:
   │       ldc @string "Hello World!"
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-024
───╯
----- JAVAP -----
not generated
