rnsc/tests/snapshots/error-parser-instructions-trailing_tokens_after_instr.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class TrailingTokensAfterInstr
.super java/lang/Object

.method static main ([Ljava/lang/String;)V
  .code stack 2 locals 1
    ldc @string "Hello World!" extra_token
    return
  .code_end
.method_end
.class_end
----- STDERR -----
[E-013] Error: unexpected trailing tokens after type hint '@string'
   ╭─[ test_data/integration/error/parser/instructions/trailing_tokens_after_instr.rns:6:32 ]
   │
 6 │     ldc @string "Hello World!" extra_token
   │         ───┬───                ─────┬─────  
   │            ╰──────────────────────────────── '@string' type hint takes 1 operand
   │                                     │       
   │                                     ╰─────── but found 1 trailing token
   │ 
   │ Help: Remove the trailing tokens or move them to a valid context.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-013
───╯
----- HASH -----
not generated
