rnsc/tests/snapshots/error-parser-mangled_name_directive-missing_operand_recovers.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; Tests that parser continues after missing operand error and reports subsequent errors
; Expected errors: E-020 (missing operand), E-034 (unexpected token in inner body)

.class public MyClass
.super java/lang/Object

.inner Inner
    .super java/lang/Object
    .mangled_name

    unknown_token ; <- E-034, still reported after recovery
.inner_end

.class_end
----- STDERR -----
[E-020] Error: missing class name after '.mangled_name'
   ╭─[ test_data/rns_integration/error/parser/mangled_name_directive/missing_operand_recovers.rns:9:5 ]
   │
 9 │     .mangled_name
   │     ──────┬──────│ 
   │           ╰──────── the '.mangled_name' directive requires a mangled name as operand
   │                  │ 
   │                  ╰─ but class name is missing
   │ 
   │ Help: Provide a mangled name after the '.mangled_name' directive, e.g.:
   │       .mangled_name <class_name>
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-020
───╯
[E-034] Error: unexpected identifier inner class body
    ╭─[ test_data/rns_integration/error/parser/mangled_name_directive/missing_operand_recovers.rns:11:5 ]
    │
 11 │     unknown_token ; <- E-034, still reported after recovery
    │     ──────┬──────  
    │           ╰──────── unexpected token
    │ 
    │ Help: Check the syntax of the inner class body and ensure all tokens are valid.
    │ 
    │ Note: For more details see:
    │       https://rune.lagertha-vm.com/errors/E-034
────╯
----- JAVAP -----
not generated
