rnsc/tests/snapshots/error-parser-method_directive-access_flags-annotation.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class MethodWithAnnotationFlag
.super java/lang/Object

.method annotation main ()V
.method_end
.class_end
----- STDERR -----
[E-016] Error: invalid method access flag 'annotation'
   ╭─[ test_data/rns_integration/error/parser/method_directive/access_flags/annotation.rns:4:9 ]
   │
 4 │ .method annotation main ()V
   │         ─────┬────  
   │              ╰────── 'annotation' is not a valid method access flag
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-016
───╯
----- JAVAP -----
not generated
